--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,13 +23,17 @@
         <meta name="theme-color" content="#ffffff">
 
         <title>
-            {% block title %}Accordéoniste professionnel – Jérémy DUTHEIL – Paris – Ile de France{% endblock %}
+            {% block title %}Accordéoniste professionnel – Jérémy DUTHEIL – Paris, Ile de France{% endblock %}
         </title>
 
-        <meta name="description" content="Jérémy Dutheil est accordéoniste à Paris ; musicien professionnel et expérimenté, il intervient seul ou en groupe lors de concerts, événements, animations ou soirées privées.">
+        {% block metadesc %}
+            <meta name="description" content="Jérémy Dutheil est accordéoniste à Paris ; musicien professionnel et expérimenté, il intervient seul ou en groupe lors de concerts, événements, animations ou soirées privées.">
+        {% endblock %}
         
         <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">
@@ -46,21 +50,35 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
+                {% set route = app.request.attributes.get('_route') %}
+
                 <div class="collapse navbar-collapse" id="navbar-content">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item px-2 py-1">
-                            <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+                            <a class="nav-link {% if app.request.attributes.get('_route') == 'homepage' %}nav-link--active{% endif %}" href="{{ path('homepage') }}">Accueil</a>
                         </li>
 
                         <li class="nav-item px-2 py-1">
-                            <a class="nav-link" href="#">Biographie</a>
+                            <a class="nav-link {% if app.request.attributes.get('_route') == 'bio' %}nav-link--active{% endif %}" href="{{ path('bio') }}">Biographie</a>
                         </li>
 
                         <li class="nav-item px-2 py-1">
-                            <a class="nav-link" href="#">Collaborations</a>
+                            <a class="nav-link {% if route == 'collaborations' 
+                                                  or route == 'duos'
+                                                  or route == 'mime'
+                                                  or route == 'marie'
+                                                  or route == 'elena'
+                                                  or route == 'groupes' %}nav-link--active{% endif %}" href="{{ path('collaborations') }}">Collaborations</a>
                         </li>
 
-                        <li class="nav-item px-2 py-1 dropdown">
+                        <li class="nav-item px-2 py-1">
+                            <a class="nav-link {% if route == 'animations' %}nav-link--active{% endif %}"
+                                href="{{ path('animations') }}">
+                                Animations
+                            </a>
+                        </li>
+
+                        <!--<li class="nav-item px-2 py-1 dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Animations
                             </a>
@@ -73,9 +91,16 @@
                                 <a class="dropdown-item" href="#">Repas en musique</a>
                                 <a class="dropdown-item" href="#">Soirées privées</a>
                             </div>
+                        </li>-->
+
+                        <li class="nav-item px-2 py-1">
+                            <a class="nav-link {% if route == 'styles' %}nav-link--active{% endif %}"
+                                href="#">
+                                Styles
+                            </a>
                         </li>
 
-                        <li class="nav-item px-2 py-1 dropdown">
+                        <!--<li class="nav-item px-2 py-1 dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Styles
                             </a>
@@ -85,10 +110,10 @@
                                 <a class="dropdown-item" href="#">Chanson française</a>
                                 <a class="dropdown-item" href="#">Jazz</a>
                             </div>
-                        </li>
+                        </li>-->
 
                         <li class="nav-item px-2 py-1">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link {% if route == 'contact' %}nav-link--active{% endif %}" href="{{ path('contact') }}">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -98,6 +123,14 @@
         </nav>
 
         {% block body %}{% endblock %}
+
+        <section class="contact">
+            <div class="container">
+                <p class="contact-txt">
+                    Pour toute information, n'hésitez pas à me contacter : <a href="mailto:dutheil.jeremy@gmail.com" style="color: #ffffff">dutheil.jeremy@gmail.com</a> / 06.85.38.22.16
+                </p>
+            </div>
+        </section>
         
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
