--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -22,11 +22,11 @@
 			<h1 class="section-title">Animations musicales</h1>
 
 			<p>
-				Vous recherchez un accordéoniste pour une soirée ou une animation en Seine et Marne (77) ? N'hésitez plus, et <a href="{{ path('contact') }}" class="text-link">contactez moi</a> dès maintenant ! 
+				Vous recherchez un accordéoniste pour une soirée ou une animation en Seine et Marne (77) ? N'hésitez plus, et <a href="{{ path('contact') }}" class="text-link">contactez moi</a> dès maintenant !
 			</p>
 
 			<p>
-				Seul ou accompagné, formule plutôt rétro ou moderne, je saurai satisfaire vos invités en m'adaptant à <strong>vos envies</strong> ; musicien professionnel avec une grande expérience, je propose un <strong>répertoire varié</strong> et personnalisé pour votre événement. 
+				Seul ou accompagné, formule plutôt rétro ou moderne, je saurai satisfaire vos invités en m'adaptant à <strong>vos envies</strong> ; musicien professionnel avec une grande expérience, je propose un <strong>répertoire varié</strong> et personnalisé pour votre événement.
 			</p>
 
 			<p>
@@ -51,7 +51,7 @@
 						Une formule discrète pour votre vin d'honneur ?
 					</p>
 
-					<a href="#" class="btn btn-primary">En savoir plus</a>
+					<a href="{{ path('animations_mariages') }}" class="btn btn-primary">En savoir plus</a>
 				</div>
 
 				<div class="col-sm-4 col--mbot">
