--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,11 +6,11 @@
 			<img src="img/flash-item-1.jpg" alt="" class="flash-item__background">
 
 			<!--<div class="container">-->
-				<div class="flash-item__content ml-auto mr-5 col-sm-5">
+				<div class="flash-item__content mr-auto ml-5 col-sm-5">
 					<h1 class="flash-item__content-title">Accordéoniste <br>pour vos événements</h1>
 
 					<p class="flash-item__content-text">
-						Vous cherchez un accordéoniste pour un anniversaire, <br>une soirée d'entreprise ou une animation seniors ? 
+						Vous cherchez un accordéoniste pour un anniversaire, <br>une soirée d'entreprise ou une animation seniors ?
 					</p>
 
 					<a href="{{ path('animations') }}" class="btn btn-secondary flash-item__content-btn">Découvrir les formules</a>
@@ -33,15 +33,15 @@
 						<h2 class="section-title">Artiste polyvalent</h2>
 
 						<p>
-							Basé à Paris, en Ile de France, <strong>Jérémy Dutheil est un accordéoniste</strong> complet abordant un large univers musical, original et résolument moderne. De la <a class="text-link" href="#">guinguette</a> au <a class="text-link" href="#">rock oriental</a>, en passant par la <a class="text-link" href="{{ path('duos') }}">chanson française</a> ou encore le <a class="text-link" href="#">jazz</a>, cet artiste passionné aime toucher à tous les styles. 
+							Basé à Paris, en Ile de France, <strong>Jérémy Dutheil est un accordéoniste</strong> complet abordant un large univers musical, original et résolument moderne. De la <a class="text-link" href="#">guinguette</a> au <a class="text-link" href="#">rock oriental</a>, en passant par la <a class="text-link" href="{{ path('duos') }}">chanson française</a> ou encore le <a class="text-link" href="#">jazz</a>, cet artiste passionné aime toucher à tous les styles.
 						</p>
 
 						<p>
-							<strong>Musicien professionnel</strong> confirmé, Jérémy tire le meilleur de chaque expérience afin de faire évoluer le son de son accordéon. Loin des flonflons musette (sans toutefois les renier), son piano à bretelles exprime tour à tour la joie, la mélancolie ou encore la tristesse. 
+							<strong>Musicien professionnel</strong> confirmé, Jérémy tire le meilleur de chaque expérience afin de faire évoluer le son de son accordéon. Loin des flonflons musette (sans toutefois les renier), son piano à bretelles exprime tour à tour la joie, la mélancolie ou encore la tristesse.
 						</p>
 
 						<p>
-							Seul ou <a class="text-link" href="{{ path('groupes') }}">en groupe</a>, Jérémy se produit sur scène dans toute la France, ainsi que dans certains lieux plus intimistes de la capitale. 
+							Seul ou <a class="text-link" href="{{ path('groupes') }}">en groupe</a>, Jérémy se produit sur scène dans toute la France, ainsi que dans certains lieux plus intimistes de la capitale.
 						</p>
 
 						<a href="{{ path('bio') }}" class="btn btn-primary">Lire la biographie</a>
@@ -51,11 +51,11 @@
 				<!-- /.col-sm-8 -->
 
 				<div class="col-sm-4">
-					<img src="{{ asset('img/homepic.jpg') }}" alt="" class="img-fluid page-section__img">
+					<img src="{{ asset('img/videos-pic.jpg') }}" alt="" class="img-fluid page-section__img">
 				</div>
 				<!-- /.col-sm-4 -->
 			</div>
-			<!-- /.row -->			
+			<!-- /.row -->
 		</div>
 		<!-- /.container -->
 	</section>
@@ -103,7 +103,7 @@
 					</p>
 
 					<p>
-						C'est aussi et avant tout l'occasion de partager une véritable <strong>aventure humaine</strong>, que ce soit dans la vie quotidienne (répétitions, organisation) ou en tournée sur les scènes françaises. 
+						C'est aussi et avant tout l'occasion de partager une véritable <strong>aventure humaine</strong>, que ce soit dans la vie quotidienne (répétitions, organisation) ou en tournée sur les scènes françaises.
 					</p>
 
 					<p>
