--- a/templates/anims/mariages.html.twig
+++ b/templates/anims/mariages.html.twig
@@ -27,7 +27,8 @@
 			</p>
 
 			<p>
-				Suivant les envies de vos pensionnaires, nous préparerons en amont l'orientation du spectacle ; plutôt dansant, plutôt chanson, plutôt discret.. C'est vous (et vos invités !) qui décidez tout. Je travaille avec des <strong>tarifs abordables</strong>, et des formules <strong>tout compris</strong> (sonorisation éventuelle, ...).
+				Suivant vos envies et celles de vos convives, nous préparerons en amont l'orientation du spectacle ; plutôt dansant, plutôt chanson, plutôt discret.. Qu'il s'agisse plutôt d'animer le vin d'honneur, le repas ou la soirée.. C'est vous (et vos invités !) qui décidez tout. <br>
+				Je propose des <strong>tarifs abordables</strong>, et des formules <strong>tout compris</strong> (sonorisation éventuelle, ...).
 			</p>
 
 			<p>
