--- a/templates/pages/collaborations.html.twig
+++ b/templates/pages/collaborations.html.twig
@@ -35,7 +35,7 @@
 						<h2 class="section-title section-title--small">Chanteurs / Chanteuses</h2>
 
 						<p>
-							Peut-être bien ma formule préférée en tant que <strong>musicien accompagnateur</strong>, je vous présente ici des duos accordéon / voix ; chacun des artistes que j'accompagne propose son propre style, et évolue dans un univers marqué et distinct. 
+							Peut-être bien ma formule préférée en tant que <strong>musicien accompagnateur</strong>, je vous présente ici des duos accordéon / voix ; chacun des artistes que j'accompagne propose son propre style, et évolue dans un univers marqué et distinct.
 						</p>
 
 						<a href="{{ path('duos') }}" class="btn btn-primary">Découvrir les duos</a>
@@ -48,7 +48,7 @@
 						<h2 class="section-title section-title--small">Groupes</h2>
 
 						<p>
-							L'accordéon est rejoint par une <strong>section rythmique</strong>, et parfois d'autres instruments mélodiques ; du <a href="#" class="text-link">rock</a> au <a href="#" class="text-link">swing</a> en passant par le <a href="#" class="text-link">jazz</a> ou le <a href="#" class="text-link">reggae</a>, venez découvrir les groupes avec lesquels j'ai plaisir à jouer !
+							L'accordéon est rejoint par une <strong>section rythmique</strong>, et parfois d'autres instruments mélodiques ; du <em class="text-link">rock</em> au <em class="text-link">swing</em> en passant par le <em class="text-link">jazz</em> ou le <em class="text-link">reggae</em>, venez découvrir les groupes avec lesquels j'ai plaisir à jouer !
 						</p>
 
 						<a href="{{ path('groupes') }}" class="btn btn-primary">Découvrir les groupes</a>
