--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,16 @@
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">
 
         {% block stylesheets %}{% endblock %}
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57123259-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-57123259-1');
+        </script>
     </head>
 
     <body>
