--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,21 +3,18 @@
 {% block body %}
 	<section class="flash">
 		<div class="flash-item">
-			<img src="img/flash-item-1.jpg" alt="" class="flash-item__background">
+			<img src="img/flash-item-1.jpg" alt="Jérémy DUTHEIL, accordéoniste professionnel" class="flash-item__background">
 
-			<!--<div class="container">-->
-				<div class="flash-item__content mr-auto ml-5 col-sm-5">
-					<h1 class="flash-item__content-title">Accordéoniste <br>pour vos événements</h1>
+			<div class="flash-item__content mr-auto ml-5 col-sm-5">
+				<h1 class="flash-item__content-title">Accordéoniste <br>pour vos événements</h1>
 
-					<p class="flash-item__content-text">
-						Vous cherchez un accordéoniste pour un anniversaire, <br>une soirée d'entreprise ou une animation seniors ?
-					</p>
+				<p class="flash-item__content-text">
+					Vous cherchez un accordéoniste pour un anniversaire, <br>une soirée d'entreprise ou une animation seniors ?
+				</p>
 
-					<a href="{{ path('animations') }}" class="btn btn-secondary flash-item__content-btn">Découvrir les formules</a>
-				</div>
-				<!-- /.flash-item__content -->
-			<!--</div>-->
-			<!-- /.container -->
+				<a href="{{ path('animations') }}" class="btn btn-secondary flash-item__content-btn">Découvrir les formules d'animations musicales</a>
+			</div>
+			<!-- /.flash-item__content -->
 		</div>
 		<!-- /.flash-item -->
 	</section>
@@ -33,7 +30,7 @@
 						<h2 class="section-title">Artiste polyvalent</h2>
 
 						<p>
-							Basé à Paris, en Ile de France, <strong>Jérémy Dutheil est un accordéoniste</strong> complet abordant un large univers musical, original et résolument moderne. De la <a class="text-link" href="#">guinguette</a> au <a class="text-link" href="#">rock oriental</a>, en passant par la <a class="text-link" href="{{ path('duos') }}">chanson française</a> ou encore le <a class="text-link" href="#">jazz</a>, cet artiste passionné aime toucher à tous les styles.
+							Basé en Ile de France (Seine-et-Marne, 77), Jérémy Dutheil est <strong>un accordéoniste français</strong> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz</em>, cet artiste passionné aime toucher à tous les styles.
 						</p>
 
 						<p>
@@ -41,7 +38,7 @@
 						</p>
 
 						<p>
-							Seul ou <a class="text-link" href="{{ path('groupes') }}">en groupe</a>, Jérémy se produit sur scène dans toute la France, ainsi que dans certains lieux plus intimistes de la capitale.
+							Seul ou <em class="text-link">en groupe</em>, Jérémy se produit sur scène dans toute la France, ainsi que dans certains lieux plus intimistes de la capitale.
 						</p>
 
 						<a href="{{ path('bio') }}" class="btn btn-primary">Lire la biographie</a>
@@ -51,7 +48,7 @@
 				<!-- /.col-sm-8 -->
 
 				<div class="col-sm-4">
-					<img src="{{ asset('img/videos-pic.jpg') }}" alt="" class="img-fluid page-section__img">
+					<img src="{{ asset('img/videos-pic.jpg') }}" alt="Jérémy DUTHEIL, accordéoniste, en concert" class="img-fluid page-section__img">
 				</div>
 				<!-- /.col-sm-4 -->
 			</div>
@@ -65,7 +62,7 @@
 		<div class="container page-section">
 			<div class="row">
 				<div class="col-sm-4 ">
-					<img src="{{ asset('img/elena.jpg') }}" alt="" class="img-fluid page-section__img">
+					<img src="{{ asset('img/elena.jpg') }}" alt="En duo accordéon / voix" class="img-fluid page-section__img">
 				</div>
 
 				<div class="col-sm-8 page-section__content-wrapper">
@@ -77,11 +74,11 @@
 						</p>
 
 						<p class="txt--blank">
-							Je travaille actuellement avec plusieurs <a class="text-link txt--blank" href="{{ path('duos') }}">chanteurs et chanteuses</a>, embrassant un large répertoire au sein même de la chanson ; certaines formations s'orienteront plutôt vers les standards du style (Brel, Piaf, Ferré), d'autres vers des auteurs moins connus du grand public (Leprest, Dimey). Mon accordéon s'invite aussi bien sur de la chanson réaliste (Damia, Fréhel), que de la chanson coquine (Odette Laure, Anne Sylveste) ou révoltée (Renaud, Paccoud).
+							Je travaille actuellement avec plusieurs <em class="text-link txt--blank">chanteurs et chanteuses</em>, embrassant un large répertoire au sein même de la chanson ; certaines formations s'orienteront plutôt vers les standards du style (Brel, Piaf, Ferré), d'autres vers des auteurs moins connus du grand public (Leprest, Dimey). Mon accordéon s'invite aussi bien sur de la chanson réaliste (Damia, Fréhel), que de la chanson coquine (Odette Laure, Anne Sylveste) ou révoltée (Renaud, Paccoud).
  						</p>
 
 						<p>
-							<a href="{{ path('duos') }}" class="btn-secondary">Voir les artistes accompagnés</a>
+							<a href="{{ path('duos') }}" class="btn-secondary">Voir les artistes accompagnés (duos)</a>
 						</p>
 					</div>
 				</div>
@@ -107,7 +104,7 @@
 					</p>
 
 					<p>
-						Travailler avec d'autres musiciens me permet enfin d'aborder des styles originaux, moins accessibles à l'accordéon solo ; je joue par exemple de la <a class="text-link" href="{{ path('mime') }}">chanson teintée de jazz</a>, du <a class="text-link" href="#">rock oriental</a> ou de la <a class="text-link" href="#">chanson swing</a>. <br>
+						Travailler avec d'autres musiciens me permet enfin d'aborder des styles originaux, moins accessibles à l'accordéon solo ; je joue par exemple de la <em class="text-link">chanson teintée de jazz</em>, du <em class="text-link">rock oriental</em> ou de la <em class="text-link">chanson swing</em>. <br>
 						Avec ces différents projets, nous travaillons essentiellement sur nos <strong>propres compositions</strong>.
 					</p>
 
@@ -117,7 +114,7 @@
 				</div>
 
 				<div class="col-sm-4">
-					<img class="img-fluid page-section__img" src="img/band.jpg" alt="">
+					<img class="img-fluid page-section__img" src="img/band.jpg" alt="Jérémy DUTHEIL, accordéoniste en groupe">
 				</div>
 			</div>
 		</div>
@@ -127,7 +124,7 @@
 		<div class="container page-section">
 			<div class="row">
 				<div class="col-sm-4">
-					<img src="{{ asset('img/anim.jpg') }}" alt="" class="img-fluid page-section__img">
+					<img src="{{ asset('img/anim.jpg') }}" alt="Jérémy DUTHEIL, animations musicales à l'accordéon" class="img-fluid page-section__img">
 				</div>
 
 				<div class="col-sm-8 page-section__content-wrapper">
@@ -135,15 +132,15 @@
 						<h2 class="section-title section-title--blank">Animations musicales</h2>
 
 						<p class="txt--blank">
-							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong> ; fort d'une certaine expérience, j'évolue au sein d'un répertoire varié qui plaira à tout type de public. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de vos attentes ; je peux aussi bien me faire discret et jouer des standards de jazz lors d'un <a class="text-link txt--blank" href="#">repas en musique</a>, que jouer du <a href="#" class="text-link txt--blank">musette</a> pour faire <a href="#" class="text-link txt--blank">danser les seniors</a>.
+							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong> ; fort d'une certaine expérience, j'évolue au sein d'un répertoire varié qui plaira à tout type de public. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de vos attentes ; je peux aussi bien me faire discret et jouer des standards de jazz lors d'un <em class="text-link txt--blank" >repas en musique</em>, que jouer du <em class="text-link txt--blank">musette</em> pour faire <em class="text-link txt--blank">danser les seniors</em>.
 						</p>
 
 						<p class="txt--blank">
-							Différentes formules sont disponibles, et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies, il m'est également possible d'être accompagné d'autres musiciens (guitare, contrebasse, violon, ...) ou d'<a class="text-link txt--blank" href="{{ path('duos') }}">une chanteuse</a>.
+							Différentes formules sont disponibles, et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies, il m'est également possible d'être accompagné d'autres musiciens (guitare, contrebasse, violon, ...) ou d'<em class="text-link txt--blank">une chanteuse</em>.
  						</p>
 
 						<p>
-							<a href="{{ path('animations') }}" class="btn-secondary">Voir les formules</a>
+							<a href="{{ path('animations') }}" class="btn-secondary">Voir les formules d'animations musicales</a>
 						</p>
 					</div>
 				</div>
