delete some useless links

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,7 +30,7 @@
 						<h2 class="section-title">Artiste polyvalent</h2>
 
 						<p>
-							Basé en Ile de France (Seine-et-Marne, 77), Jérémy Dutheil est <strong>un accordéoniste français</strong> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz</em>, cet artiste passionné aime toucher à tous les styles.
+							Basé à Paris, Jérémy Dutheil est <strong>un accordéoniste français</strong> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz</em>, cet artiste passionné aime toucher à tous les styles.
 						</p>
 
 						<p>
@@ -136,7 +136,7 @@
 						</p>
 
 						<p class="txt--blank">
-							Différentes formules sont disponibles, et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies, il m'est également possible d'être accompagné d'autres musiciens (guitare, contrebasse, violon, ...) ou d'<em class="text-link txt--blank">une chanteuse</em>.
+							À <strong>Paris</strong> ou dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies, il m'est également possible d'être accompagné d'autres musiciens (guitare, contrebasse, violon, ...) ou d'<em class="text-link txt--blank">une chanteuse</em>.
  						</p>
 
 						<p>
