--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -22,7 +22,7 @@
 			<h1 class="section-title">Animations musicales</h1>
 
 			<p>
-				Vous recherchez un accordéoniste pour une soirée ou une animation en Seine et Marne (77) ? N'hésitez plus, et <a href="{{ path('contact') }}" class="text-link">contactez moi</a> dès maintenant !
+				Vous recherchez un accordéoniste pour une soirée ou une animation à Paris (Ile de France) ou dans une autre région ? N'hésitez plus, et <a href="{{ path('contact') }}" class="text-link">contactez moi</a> dès maintenant !
 			</p>
 
 			<p>
@@ -48,7 +48,7 @@
 					<h2 class="section-title section-title--small">Mariages</h2>
 
 					<p>
-						Une formule discrète pour votre vin d'honneur ?
+						Une formule discrète pour votre vin d'honneur ? Un repas en musique ?
 					</p>
 
 					<a href="{{ path('animations_mariages') }}" class="btn btn-primary">En savoir plus</a>
@@ -61,27 +61,27 @@
 						De la musique au repas, suivie d'un moment de danse après le dessert !
 					</p>
 
-					<a href="#" class="btn btn-primary">En savoir plus</a>
+					<!--<a href="#" class="btn btn-primary">En savoir plus</a>-->
 				</div>
 
 				<div class="col-sm-4 col--mbot">
 					<h2 class="section-title section-title--small">Événements d'entreprise</h2>
 
 					<p>
-						Un ou plusieurs musiciens pour votre réception
+						Un ou plusieurs musiciens pour votre réception ou cocktail
 					</p>
 
-					<a href="#" class="btn btn-primary">En savoir plus</a>
+					<!--<a href="#" class="btn btn-primary">En savoir plus</a>-->
 				</div>
 
 				<div class="col-sm-4 col--mbot">
 					<h2 class="section-title section-title--small">Repas en musique</h2>
 
 					<p>
-						Mangez au son de l'accordéon, qui saura se faire discret pour les conversations
+						Vous êtes un restaurant et souhaitez animer discrètement vos repas ? Ou simplement un particulier qui invite des amis ? L'accordéon se fond dans l'arrière plan, et distille une musique d'ambiance agréable.
 					</p>
 
-					<a href="#" class="btn btn-primary">En savoir plus</a>
+					<!--<a href="#" class="btn btn-primary">En savoir plus</a>-->
 				</div>
 
 				<div class="col-sm-4 col--mbot">
@@ -91,7 +91,7 @@
 						Dans votre appartement / maison, ou en extérieur, pour n'importe quelle occasion..
 					</p>
 
-					<a href="#" class="btn btn-primary">En savoir plus</a>
+					<!--<a href="#" class="btn btn-primary">En savoir plus</a>-->
 				</div>
 			</div>
 		</div>
