--- a/templates/anims/seniors.html.twig
+++ b/templates/anims/seniors.html.twig
@@ -22,7 +22,7 @@
 			<h1 class="section-title">Animations seniors</h1>
 
 			<p>
-				Accordéoniste professionnel basé en Seine et Marne (77), je suis disponible pour des <strong>animations musicales</strong> à destination des <strong>seniors</strong> ; je me déplace directement dans votre établissement (maison de retraite, EHPAD, ...). <br>
+				Accordéoniste professionnel basé à Paris (Ile de France), je suis disponible pour des <strong>animations musicales</strong> à destination des <strong>seniors</strong> ; je me déplace directement dans votre établissement (maison de retraite, EHPAD, ...). <br>
 				Fort d'une expérience musicale conséquente, je vous propose un répertoire <strong>varié</strong> parcourant tous les styles et toutes les générations ; du musette au jazz, en passant par la chanson française et le tango, il y en aura pour <strong>tous les goûts</strong>.
 			</p>
 
