--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -109,12 +109,12 @@
                             </div>
                         </li>-->
 
-                        <li class="nav-item px-2 py-1">
+                        <!--<li class="nav-item px-2 py-1">
                             <a class="nav-link {% if route == 'styles' %}nav-link--active{% endif %}"
                                 href="#">
                                 Styles
                             </a>
-                        </li>
+                        </li>-->
 
                         <!--<li class="nav-item px-2 py-1 dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
