--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -145,9 +145,12 @@
                 <p class="contact-txt" itemscope itemtype="http://schema.org/Person">
                     N'hésitez pas à me contacter pour toute information :<br>
                     <span itemprop="name">Jérémy DUTHEIL</span> - <a href="mailto:dutheil.jeremy@gmail.com" style="color: #ffffff" itemprop="email">dutheil.jeremy@gmail.com</a> - <span itemprop="telephone">06.85.38.22.16</span><br>
-                    <div class="text-center" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                        <span itemprop="streetAddress">1B Place Moutier</span>, <span itemprop="postalCode">77170</span> <span itemprop="addressLocality">Brie Comte Robert</span>
-                    </div>
+                </p>
+
+                <hr style="background-color: #ffffff;">
+
+                <p class="text-center" style="font-size: 14px; ">
+                    Jérémy fait confiance à <a href="http://www.monsieuraccordeon.com" style="color: #ffffff;" target="_blank">Monsieur Accordéon</a> pour l'entretien de ses accordéons.
                 </p>
             </div>
         </section>
