--- a/templates/anims/seniors.html.twig
+++ b/templates/anims/seniors.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy Dutheil - Accordéoniste professionnel pour animations seniors en Seine et Marne (77)
+	Animation musicale à l'accordéon pour seniors, Paris et Ile de France | Jérémy DUTHEIL
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous recherchez une animation musicale seniors (maison de retraite, EHPAD, ..) en Seine et Marne ? Accordéoniste professionnel, je me déplace dans votre établissement et m'adapte à vos besoins !">
+	<meta name="description" content="Animation musicale à l'accordéon pour seniors (maison de retraite, EHPAD), Paris et Ile de France : jazz, chanson française, musette, ...">
 {% endblock %}
 
 {% block body %}
@@ -19,7 +19,7 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Animations seniors</h1>
+			<h1 class="section-title">Animations musicales seniors</h1>
 
 			<p>
 				Accordéoniste professionnel basé à Paris (Ile de France), je suis disponible pour des <strong>animations musicales</strong> à destination des <strong>seniors</strong> ; je me déplace directement dans votre établissement (maison de retraite, EHPAD, ...). <br>
@@ -33,6 +33,8 @@
 			<p>
 				N'hésitez pas à <a href="{{ path('contact') }}" class="text-link">me contacter</a> pour en discuter !
 			</p>
+
+			<h2 class="section-title section-title--small">Quelque extraits</h2>
 
 			<div class="row">
                 <div class="col-md-6">
