--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
         <meta name="theme-color" content="#ffffff">
 
         <title>
-            {% block title %}Accordéoniste professionnel – Jérémy DUTHEIL – Paris, Ile de France{% endblock %}
+            {% block title %}Accordéoniste professionnel | Paris, Ile de France | Jérémy DUTHEIL{% endblock %}
         </title>
 
         {% block metadesc %}
@@ -143,7 +143,7 @@
         <section class="contact">
             <div class="container">
                 <p class="contact-txt" itemscope itemtype="http://schema.org/Person">
-                    N'hésitez pas à me contacter pour toute information :<br>
+                    Pour tout renseignement :<br>
                     <span itemprop="name">Jérémy DUTHEIL</span> - <a href="mailto:dutheil.jeremy@gmail.com" style="color: #ffffff" itemprop="email">dutheil.jeremy@gmail.com</a> - <span itemprop="telephone">06.85.38.22.16</span><br>
                 </p>
 
