--- a/templates/anims/mariages.html.twig
+++ b/templates/anims/mariages.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy Dutheil - Accordéoniste professionnel pour votre mariage - France entière
+	Animation musicale à l'accordéon pour mariage : jazz, chanson française, .. | Jérémy DUTHEIL
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous recherchez une animation musicale pour votre mariage ? Accordéoniste professionnel, je me déplace dans votre établissement et m'adapte à vos besoins !">
+	<meta name="description" content="Animation musicale à l'accordéon pour votre mariage : jazz, chanson française, ... En solo ou en groupe">
 {% endblock %}
 
 {% block body %}
@@ -19,10 +19,10 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Mariages</h1>
+			<h1 class="section-title">Animations musicales mariages</h1>
 
 			<p>
-				Accordéoniste professionnel basé en Seine et Marne (77), je suis disponible pour des <strong>animations musicales</strong> lors de votre mariage et me déplace dans la France entière ; les formules et le répertoire sont variés, en accord avec vos envies (vin d'honneur, soirée, ...). <br>
+				Accordéoniste professionnel basé à Paris (Ile de France), je suis disponible pour des <strong>animations musicales</strong> lors de votre mariage et me déplace dans la France entière ; les formules et le répertoire sont variés, en accord avec vos envies (vin d'honneur, soirée, ...). <br>
 				Fort d'une expérience musicale conséquente, je vous propose un répertoire <strong>varié</strong> parcourant tous les styles et toutes les générations ; du musette au jazz, en passant par la chanson française et le tango, il y en aura pour <strong>tous les goûts</strong>.
 			</p>
 
