--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
 			<img src="img/flash-item-1.jpg" alt="Jérémy DUTHEIL, accordéoniste professionnel" class="flash-item__background">
 
 			<div class="flash-item__content mr-auto ml-5 col-sm-5">
-				<h1 class="flash-item__content-title">Accordéoniste <br>pour vos événements</h1>
+				<h2 class="flash-item__content-title">Accordéoniste <br>pour vos événements</h1>
 
 				<p class="flash-item__content-text">
 					Vous cherchez un accordéoniste pour un anniversaire, <br>une soirée d'entreprise ou une animation seniors ?
@@ -27,10 +27,10 @@
 			<div class="row">
 				<div class="col-sm-8 page-section__content-wrapper">
 					<div>
-						<h2 class="section-title">Artiste polyvalent</h2>
+						<h1 class="section-title">Artiste polyvalent à Paris</h1>
 
 						<p>
-							Basé à Paris, Jérémy Dutheil est <strong>un accordéoniste français</strong> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz</em>, cet artiste passionné aime toucher à tous les styles.
+							Jérémy Dutheil est <strong>un accordéoniste français</strong> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz</em>, cet artiste passionné aime toucher à tous les styles.
 						</p>
 
 						<p>
