--- a/templates/pages/duos.html.twig
+++ b/templates/pages/duos.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Duos accordéon / voix - Accordéoniste professionnel
+	Accordéoniste, Paris | Jérémy DUTHEIL | Duos accordéon / voix
 {% endblock %}
 
 {% block metadesc %}
@@ -22,7 +22,7 @@
 			<h1 class="section-title">Duos accordéon / voix</h1>
 
 			<p>
-				Être musicien professionnel, c'est aussi savoir <strong>accompagner</strong> ; l'accordéon se met alors au service du texte, ce sont les paroles qui priment et que la musique doit porter. Exercice de style très intéressant, le duo accordéon / voix permet également de jouer dans des lieux <strong>plus intimistes</strong> ; la sonorisation y est accessoire, et le contact avec le public bien réel. 
+				Être musicien professionnel, c'est aussi savoir <strong>accompagner</strong> ; l'accordéon se met alors au service du texte, ce sont les paroles qui priment et que la musique doit porter. Exercice de style très intéressant, le duo accordéon / voix permet également de jouer dans des lieux <strong>plus intimistes</strong> ; la sonorisation y est accessoire, et le contact avec le public bien réel.
 			</p>
 
 			<p>
@@ -36,7 +36,7 @@
 					<img class="img-fluid duos-pic" src="img/duos_mime.jpg" alt="">
 
 					<p>
-						Chansons débraillées ! 
+						Chansons débraillées !
 					</p>
 
 					<a href="{{ path('mime') }}" class="btn btn-primary">En savoir plus</a>
