--- a/templates/pages/groupes.html.twig
+++ b/templates/pages/groupes.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Groupes de musique - Accordéoniste professionnel
+	Accordéoniste, Paris | Jérémy DUTHEIL | Les groupes
 {% endblock %}
 
 {% block metadesc %}
@@ -29,7 +29,7 @@
 					<img class="img-fluid duos-pic" src="img/duos_mime.jpg" alt="">
 
 					<p>
-						Chansons débraillées ! 
+						Chansons débraillées !
 					</p>
 
 					<a href="{{ path('mime') }}" class="btn btn-primary">En savoir plus</a>
