--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
         <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">
@@ -131,6 +131,18 @@
                         <li class="nav-item px-2 py-1">
                             <a class="nav-link {% if route == 'contact' %}nav-link--active{% endif %}" href="{{ path('contact') }}">Contact</a>
                         </li>
+
+                        <li class="nav-item ">
+                            <a style="font-size: 24px;" class="nav-link" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank"><i class="fab fa-facebook"></i></a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a style="font-size: 24px;" class="nav-link" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a style="font-size: 24px;" class="nav-link" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -138,7 +150,8 @@
             <!-- /.container -->
         </nav>
 
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
 
         <section class="contact">
             <div class="container">
