--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Jérémy DUTHEIL - Vidéos / Audio - Accordéoniste professionnel
+	Accordéoniste, Paris | Jérémy DUTHEIL | Vidéos
 {% endblock %}
 
 {% block metadesc %}
